Fixed images height on mobile

--- a/assets/css/scss/_main.scss
+++ b/assets/css/scss/_main.scss
@@ -361,7 +361,6 @@
 	  
 	  img {
 		  width:auto;
-			height:100%;
 	  }
 	  
 	 @include tablet{
