--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3559,7 +3559,6 @@ h3 img {
 }
 .sidebyside img {
   width: auto;
-  height: 100%;
 }
 @media (max-width: 480px) {
   .sidebyside {
